--- a/grocery.html
+++ b/grocery.html
@@ -10,7 +10,7 @@
 <body background="images/bask3.jpg"  width="device-width" height="500px">
 
 
-<div id="demo text-center">
+<div id="demo text-center" class="col-lg-11 col-xs-12 col-md-9">
 
   <h2 class="text-center pt-4 " style=" color: blue; letter-spacing: 2px; text-transform: uppercase;font-family: 'Times New Roman', Times, serif; ">  <u> Grocery Shopping list</u></h2>
   <br>
