--- a/grocery.html
+++ b/grocery.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="grocery.css">
 </head>
 <title>Grocery</title>
-<body background="images/bask3.jpg"  width="device-width" height="500px">
+<body background="images/bask3.jpg"  width="device-width" >
 
 
 <div id="demo text-center" >
