--- a/grocery.html
+++ b/grocery.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="grocery.css">
 </head>
 <title>Grocery</title>
-<body background="images/bask3.jpg"   >
+<body background="images/bask3.jpg" class="responsive"   >
 
 
 <div id="demo text-center" >
